# TDSESolver

./: .gitignore  AbsorptiveRegions.cpp  AbsorptiveRegions.h  CMakeLists.txt  ClassDiagram.cd  CommonHeader.h  ConfigParser.cpp  ConfigParser.h  HHGFunctions.cpp  HHGFunctions.h  KineticOperator.cpp  KineticOperator.h  LinuxFuncs.cpp  LinuxFuncs.h  MathTools.cpp  MathTools.h  MathTools.tpp  Measurers.cpp  Measurers.h  MultiSimulationManager.cpp  MultiSimulationManager.h  OpenBLAS_zhpevx_timings.txt  ParallelSimParser.cpp  ParallelSimParser.h  PhysCon.h  Potentials.cpp  Potentials.h  ProgressTracker.cpp  ProgressTracker.h  README.md  SimulationManager.h  SimulationWorkspace.cpp  SimulationWorkspace.h  TDSEIterator1D.cpp  TDSEIterator1D.h  TDSESolveLinux.sln  TDSESolveLinux.vcxproj  TDSESolveLinux.vcxproj.filters  ThreadParser.cpp  ThreadParser.h  (+11 more)
doc/: OpenBLAS_NoOMP_zhpevx_timings.txt  Simulation Binary File Format.xlsx  config_file_guide.cfg  libFLAME_zhpevx_timings.txt
src/: AbsorptiveRegions.cpp  CMakeLists.txt  CommonHeader.h  HHGFunctions.h  LinuxFuncs.h  MathTools.h  MathTools.tpp  ParsingTools.cpp  ParsingTools.h  Simulation Binary File Format.xlsx  TDSESolveLinux.code-workspace  exprtk.hpp
src/core/: AbsorptiveRegions.cpp  AbsorptiveRegions.h  CMakeLists.txt  CORECommonHeader.h  CommonHeader.h  FDBCs.cpp  FDBCs.h  HHGFunctions.cpp  HHGFunctions.h  KineticOperator.cpp  KineticOperator.h  LinuxFuncs.cpp  MathTools.cpp  MathTools.h  MathTools.tpp  Measurers.cpp  Measurers.h  MultiSimulationManager.cpp  MultiSimulationManager.h  ParsingTools.h  Potentials.cpp  Potentials.h  SimulationManager.cpp  SimulationManager.h  WfcRhoTools.cpp  WfcRhoTools.h  blas_externs.h  config_file_guide.cfg  test.cpp
src/lapack_timing/: main.cpp
src/standalone/: CMakeLists.txt  ProgressTracker.cpp  ProgressTracker.h  STLNCommonHeader.h  SimulationWorkspace.cpp  SimulationWorkspace.h  ThreadParser.cpp  ThreadParser.h  main.cpp
src/tdsepy/: Binding.cpp  Bindings.cpp  CMakeLists.txt  PyCommon.h  PyMain.cpp  PyMeasurers.cpp  PyMeasurers.h  PyPotentials.cpp  PyPotentials.h  PySimulation.cpp  PySimulation.h  TDSEpyBindings.py  _PyBindingsPreamble  __init__.py  generatePythonBindingsFile.sh  setup.py
src/tdsepy/helpers/: postproc.py  rawdataload.py  rescatter_simu.py  runSlurm.sh  unproject.py
src/tdsepy/tdsepy_helpers/: RadialSpectrumPlot.py  fftw_nt_0016.wisdom  fftw_nt_0032.wisdom  fftw_nt_0064.wisdom  fftw_nt_0128.wisdom  postproc.py  rawdataload.py  rescatter_simu.py  rescatter_simu_test.py  runSlurm.sh  test.py  unproject.py
